# kerla

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  COPYING.md  Cargo.toml  HACKING.md  LICENSE.md  Makefile  README.md  book.toml  build.rs  hello_world.S  rust-toolchain  rust-toolchain.toml  这是一个问题.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  integration_tests.yml  release.yml
Documentation/: .gitignore  SUMMARY.md  architecture.drawio  architecture.md  book.toml  changelog.md  compatibility.md  introduction.md  kernel-parameters.md  logging.md  quickstart.md
Documentation/environments/: README.md  digitalocean.md
Documentation/hacking/: README.md  debugging-101.md
LICENSES/: APACHE_LICENSE.md  MIT_LICENSE.md
arch/: Cargo.toml  addr.rs  backtrace.rs  bootinfo.rs  global_allocator.rs  lib.rs  page_allocator.rs  printk.rs  result.rs  spinlock.rs
arch/x64/: Cargo.toml  address.rs  apic.rs  arch_prctl.rs  boot.S  boot.rs  cpu_local.rs  idt.rs  interrupt.rs  ioapic.rs  lib.rs  mod.rs  paging.rs  pit.rs  process.rs  semihosting.rs  serial.rs  syscall.rs  trap.S  tss.rs  usercopy.S
boot/: bochsrc  grub.cfg
boot2dump/: .clang-format  .clang-tidy  .editorconfig  .gdbinit  .gitignore  LICENSE.md  Makefile  README.md
boot2dump/rust/: Cargo.toml
boot2dump/rust/src/: lib.rs
boot2dump/src/: disk.h  elf.h  endian.h  fs.h  list.h  main.c  malloc.c  malloc.h  page_alloc.c  page_alloc.h  pci.c  pci.h  printf.c  printf.h  string.c  string.h  types.h  ubsan.c  ubsan.h
boot2dump/tools/: merge-compile-commands.py
common/: Cargo.toml  addr.rs  backtrace.rs  bootinfo.rs  global_allocator.rs  lib.rs  printk.rs  spinlock.rs
common/arch/: mod.rs
common/arch/x64/: mod.rs
demo/: .editorconfig  .eslintrc.js  README.md  demo  package.json  setup.sh  tsconfig.json
demo/ansible/: .gitignore  Makefile  ansible.cfg  demo.service  firecracker  hosts  playbook.yml
demo/src/: firecracker.ts  logger.ts  main.ts  ssh_proxy.ts
drivers/virtio_net/: Cargo.toml  lib.rs  virtio.rs  virtio_net.rs
exts/: README.md
exts/virtio_blk/: Cargo.toml  lib.rs
exts/virtio_block/: Cargo.toml  lib.rs
exts/virtio_net/: Cargo.toml  lib.rs  virtio_net.rs
exts/virtio_net/transports/: mod.rs  virtio_pci.rs
initramfs/: Dockerfile  __init__.py  busybox.py  curl.py  dropbear.py  inittab.py  integration_tests.py
initramfs/busybox/: config
initramfs/dropbear/: accept-empty-password-root-login.patch
initramfs/etc/: banner  profile
initramfs/integration_tests/: close_pipes_on_exit.test  http-get.test
integration_tests/: run.sh
kerla.dev/: .gitignore  .vercelignore  build-docs.sh  build-src-docs.sh  package.json
kerla.dev/pages/: index.tsx
kernel/: Cargo.toml  README.md  allocator.rs  boot.rs  build.rs  ctypes.rs  deferred_job.rs  elf.rs  epoll.rs  interrupt.rs  lang_items.rs  logger.rs  main.rs  pipe.rs  poll.rs  prelude.rs  printk.rs  process.rs  profile.rs  random.rs  result.rs  test_runner.rs  thread.rs  timer.rs  user_buffer.rs
kernel/arch/: mod.rs
kernel/arch/x64/: address.rs  apic.rs  arch_prctl.rs  asm.rs  backtrace.rs  boot.S  boot.rs  bootinfo.rs  cpu_local.rs  gdt.rs  idle.rs  idt.rs  interrupt.rs  ioapic.rs  lock.rs  mod.rs  multiboot.rs  page_table.rs  pit.rs  process.rs  semihosting.rs  serial.rs  signal.rs  syscall.rs  thread.rs  trap.S  tss.rs  usercopy.S  usermode.S  vga.rs  x64.json  x64.ld
kernel/drivers/: driver.rs  ioport.rs  mod.rs  pci.rs  virtio.rs  virtio_net.rs
kernel/drivers/virtio/: mod.rs  virtio.rs  virtio_net.rs
kernel/drivers/virtio/transports/: mod.rs  virtio_mmio.rs  virtio_pci.rs
kernel/fs/: devfs.rs  file_system.rs  initramfs.rs  inode.rs  mod.rs  mount.rs  opened_file.rs  path.rs  stat.rs  tmpfs.rs
kernel/fs/devfs/: mod.rs  null.rs  tty.rs
kernel/fs/ext2/: mod.rs
kernel/fs/procfs/: metrics.rs  mod.rs
kernel/mm/: global_allocator.rs  mod.rs  page_allocator.rs  page_fault.rs  vm.rs
kernel/net/: mod.rs  socket.rs  tcp_socket.rs  udp_socket.rs  unix_socket.rs
kernel/process/: cmdline.rs  elf.rs  execve.rs  fork.rs  init_stack.rs  mod.rs  process.rs  process_group.rs  scheduler.rs  signal.rs  switch.rs  wait_queue.rs
kernel/syscall/: mod.rs  syscall.rs  write.rs
kernel/syscalls/: accept.rs  arch_prctl.rs  bind.rs  brk.rs  chdir.rs  chmod.rs  clock_gettime.rs  clone3.rs  close.rs  connect.rs  dispatcher.rs  dup2.rs  epoll_create1.rs  epoll_ctl.rs  epoll_wait.rs  execve.rs  exit.rs  exit_group.rs  fcntl.rs  fork.rs  fstat.rs  fsync.rs  getcwd.rs  getdents64.rs  getpeername.rs  getpgid.rs  getpid.rs  getppid.rs  getrandom.rs  getsockname.rs  getsockopt.rs  gettid.rs  ioctl.rs  kill.rs  link.rs  linkat.rs  listen.rs  lstat.rs  mkdir.rs  mmap.rs  (+24 more)
kernel/tty/: line_discipline.rs  mod.rs  pty.rs
kernel/utils/: byte_size.rs  lazy.rs  mod.rs  once.rs
libs/ext2/: Cargo.toml  endian_tool.rs  error.rs  ext2.rs  lib.rs  super_block.rs  test.rs
libs/kerla_api/: Cargo.toml  kernel_ops.rs  lib.rs  net.rs
libs/kerla_api/driver/: block.rs  ioport.rs  mod.rs  net.rs  pci.rs
libs/kerla_utils/: Cargo.toml  bitmap.rs  bitmap_allocator.rs  buddy_allocator.rs  bump_allocator.rs  downcast.rs  id_table.rs  lib.rs  offsetof.rs  ring_buffer.rs  static_cell.rs
runtime/: Cargo.toml  README.md  addr.rs  address.rs  backtrace.rs  bootinfo.rs  global_allocator.rs  lib.rs  logger.rs  page_allocator.rs  print.rs  printk.rs  spinlock.rs
runtime/x64/: apic.rs  backtrace.rs  boot.rs  bootinfo.rs  cpu_local.rs  gdt.rs  idle.rs  interrupt.rs  ioapic.rs  mod.rs  paging.rs  profile.rs  semihosting.rs  serial.rs  syscall.rs  trap.S  vga.rs
src/: boot.rs  lang_items.rs  main.rs  printk.rs  test_runner.rs
testing/: Dockerfile  README.md
tools/: create-qcow2.sh  create-release.py  docker2initramfs.py  embed-symbol-table.py  generate-kexts-loader.py  inspect-init-in-docker-image.py  make-bootable-on-qemu.py  run-qemu.py  run-unittests.sh
utils/: Cargo.toml  alignment.rs  buddy_allocator.rs  bump_allocator.rs  bytes_parser.rs  downcast.rs  endian.rs  lib.rs  once.rs  ring_buffer.rs
(+59 files in other folders)
