[package]
name = "kerla_arch"
version = "0.0.4"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[lib]
name = "kerla_arch"
path = "lib.rs"

[dependencies]
log = "0.4"
cfg-if = "1"
arrayvec = { version = "0.7.2", default-features = false }
bitflags = "1.3.2"
atomic_refcell = "0.1.6"
spin = "0.9.2"
buddy_system_allocator = { version = "0.8.0", features = ["const_fn"] }
vte = "0.10"

# TODO: remove
smoltcp = { version = "0.7.5", default-features = false, features = ["alloc", "proto-ipv4", "socket", "socket-raw", "socket-udp", "socket-tcp", "proto-dhcpv4", "ethernet"] }

x86 = "0.43.0"

kerla_utils = { path = "../libs/kerla_utils", features = ["no_std"] }

[features]
