[package]
name = "kerla_common"
version = "0.0.1"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[lib]
name = "kerla_common"
path = "lib.rs"

[dependencies]
log = "0.4"
arrayvec = { version = "0.7.2", default-features = false }
x86 = "0.43.0"

kerla_utils = { path = "../libs/kerla_utils", features = ["no_std"] }

[features]
