[package]
name = "kerla"
version = "0.0.4"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[[bin]]
name = "kerla"
path = "main.rs"

[dependencies]
spin = "0.9.2"
x86 = "0.43.0"
memoffset = "0.6.4"
buddy_system_allocator = "0.8.0"
arrayvec = { version = "0.7.2", default-features = false }
goblin = { version = "0.4", default-features = false, features = ["elf64"] }
bitflags = "1.3.2"
hashbrown = { version = "0.11.2", features = ["nightly"] }
log = "0.4"
crossbeam = { version = "0.8.1", default-features = false, features = ["alloc"] }
smoltcp = { version = "0.7.5", default-features = false, features = ["alloc", "proto-ipv4", "socket", "socket-raw", "socket-udp", "socket-tcp", "proto-dhcpv4", "ethernet"] }
cfg-if = "1"
atomic_refcell = "0.1.6"
vte = "0.10"

kerla_arch = { path = "../arch" }
kerla_utils = { path = "../libs/kerla_utils", features = ["no_std"] }
