[package]
name = "kerla_kernel"
version = "0.0.4"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[[bin]]
name = "kerla_kernel"
path = "main.rs"

[dependencies]
memoffset = "0.6.4"
log = "0.4"
spin = "0.9.2"
goblin = { version = "0.4", default-features = false, features = ["elf64"] }
smoltcp = { version = "0.7.5", default-features = false, features = ["alloc", "proto-ipv4", "socket", "socket-raw", "socket-udp", "socket-tcp", "proto-dhcpv4", "ethernet"] }

# Data structues.
bitflags = "1.3.2"
arrayvec = { version = "0.7.2", default-features = false }
hashbrown = { version = "0.11.2", features = ["nightly"] }
crossbeam = { version = "0.8.1", default-features = false, features = ["alloc"] }
atomic_refcell = "0.1.6"

# Arch-specific dependencies.
x86 = "0.43.0"

kerla_runtime = { path = "../runtime" }
kerla_utils = { path = "../libs/kerla_utils", features = ["no_std"] }
