[package]
name = "kerla_runtime"
description = "An OS-agnostic bootstrap and runtime support library for kernels."
version = "0.1.0"
authors = ["The Kerla Authors"]
edition = "2021"

[lib]
name = "kerla_runtime"
path = "lib.rs"

[dependencies]
log = "0.4"
cfg-if = "1"
arrayvec = { version = "0.7.2", default-features = false }
bitflags = "1.3.2"
atomic_refcell = "0.1.6"
spin = "0.9.2"
buddy_system_allocator = { version = "0.8.0", features = ["const_fn"] }

# x64-specific dependencies.
x86 = "0.47.0"
vte = "0.10"

kerla_utils = { path = "../libs/kerla_utils", features = ["no_std"] }
log_filter = { path = "../libs/log_filter" }
