[package]
name = "kerla_arch_x64"
version = "0.0.1"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[lib]
name = "kerla_arch_x64"
path = "lib.rs"

[dependencies]
x86 = "0.43.0"
spin = "0.9.2"
memoffset = "0.6.4"
bitflags = "1.3.2"
log = "0.4"
crossbeam = { version = "0.8.1", default-features = false }

kerla_utils = { path = "../../libs/kerla_utils", features = ["no_std"] }

[features]
