[package]
name = "virtio_net"
version = "0.0.1"
authors = ["The Kerla Authors"]
edition = "2021"

[lib]
name = "virtio_net"
path = "lib.rs"

[dependencies]
bitflags = "1.3.2"
memoffset = "0.6.5"

kerla_api = { path = "../../libs/kerla_api" }
kerla_utils = { path = "../../libs/kerla_utils" }
virtio = { path = "../../libs/virtio" }
