[package]
name = "kerla_api"
version = "0.0.1"
authors = ["The Kerla Authors"]
edition = "2021"

[lib]
name = "kerla_api"
path = "lib.rs"

[dependencies]
log = "0.4"
memoffset = "0.6.5"
arrayvec = { version = "0.7.2", default-features = false }

# Arch-specific dependencies.
x86 = "0.43.0"

# Local dependencies.
kerla_runtime = { path = "../../runtime" }
kerla_utils = { path = "../kerla_utils" }
