[package]
name = "kerla_utils"
version = "0.1.0"
authors = ["The Kerla Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kerla_utils"
path = "lib.rs"

[features]
no_std = []

[dependencies]
log = "0.4"
spin = "0.9.2"
crossbeam = { version = "0.8.1", default-features = false }
bitvec = { version = "1.0", default-features = false }
